# dartmouth-chat-tools

./: README.md  pyproject.toml
resources/: dartmouth-template.docx  dartmouth-template.pptx
src/dartmouth_chat_tools/: __init__.py  assistant_mode.py  auto_memory.py  chats.py  create_data_visualization.py  create_document.py  dchat_persona.py  image.py  inject_user_id.py  knowledge.py  notes.py  responses_api_manifold_pipe.py  study_mode.py  time.py  web_search.py
